<resources>
    <string name="app_name">Layouts</string>
    <string name="ask_doubts">Ask Doubts</string>
    <string name="my_posts">My posts</string>
    <string name="my_groups">My Groups</string>
    <string name="open_forum">Open Forum</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="dips_academy1">Dips Academy</string>
    <string name="institute1">Institute</string>
    <string name="dips_academy2">Dips Academy</string>
    <string name="institute2">Institute</string>
    <string name="dips_academy3">Dips Academy</string>
    <string name="institute3">Institute</string>
    <string name="dips_academy4">Dips Academy</string>
    <string name="institute4">Institute</string>
    <string name="dips_academy5">Dips Academy</string>
    <string name="institute5">Institute</string>
    <string name="dips_academy6">Dips Academy</string>
    <string name="institute6">Institute</string>
    <string name="dips_academy7">Dips Academy</string>
    <string name="institute7">Institute</string>
    <string name="dips_academy8">Dips Academy</string>
    <string name="institute8">Institute</string>
    <string name="dips_academy9">DIPS Academy</string>
    <string name="r">R</string>
    <string name="rajendra_dubey">Rajendra Dubey</string>
    <string name="bijendra_1">Bijendra(+2)</string>
    <string name="_5_hours_ago">5 hours ago</string>
    <string name="mathematics">Mathematics</string>
    <string name="video_classes">-Video Classes</string>
    <string name="mathematics_txt">Mathematics includes the study of such topics as quantity,structure,space,and change. It has no generally accepted…….</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="b">B</string>
    <string name="bijendra">Bijendra</string>
    <string name="bijendra_2">Bijendra(+2)</string>
    <string name="web_at_5_30">Web at 5:30</string>
    <string name="physics">Physics</string>
    <string name="video_classes1">-Video Classes</string>
    <string name="mathematic_txt_2">Mathematics includes the study of such topics as quantity,structure,space,and change. It has no generally accepted…….</string>
    <string name="_0_1">0</string>
    <string name="_2_1">2</string>
    <string name="v">V</string>
    <string name="vipin">Vipin</string>
    <string name="bijendra_3">Bijendra(+2)</string>
    <string name="_53_days_ago">53 days ago</string>
    <string name="physics1">Physics</string>
    <string name="video_classes2">-Video Classes</string>
    <string name="mathematics_txt3">Mathematics includes the study of such topics as quantity,structure,space,and change. It has no generally accepted…….</string>
    <string name="_0_2">0</string>
    <string name="_2_3">2</string>
    <string name="create_new_thread">Create new thread</string>
    <string name="description">Description</string>
    <string name="attachment">Attachment</string>
    <string name="create">Create</string>
    <string name="select_group_yo_forward">Select Group yo Forward</string>
    <string name="faculty">Faculty</string>
    <string name="net_jan_2021">NET Jan 2021</string>
    <string name="jam_statistics">JAM Statistics</string>
    <string name="csir_net_27_june_2021">CSIR NET 27 June 2021</string>
    <string name="faculty_2">Faculty 2</string>
    <string name="cancel">Cancel</string>
    <string name="forward">forward</string>
    <string name="filter">Filter</string>
    <string name="select_category">Select category</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="group_filter">Group Filter</string>
    <string name="post_filter">Post Filter</string>
    <string name="replied">Replied</string>
    <string name="tagged_in">Tagged in</string>
    <string name="not_replied">Not Replied</string>
    <string name="reset">reset</string>
    <string name="search">Search</string>

</resources>