<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#292724"
        android:textSize="19dp"
        android:text="@string/select_group_yo_forward"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="58dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/faculty"
        android:textSize="18dp"
        android:textColor="#707070"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="66dp"
        android:layout_marginStart="66dp"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="102dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/net_jan_2021"
        android:textColor="#707070"
        android:textSize="18dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="110dp"
        android:layout_marginStart="66dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="146dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="154dp"
        android:layout_marginStart="66dp"
        android:text="@string/jam_statistics"
        android:textColor="#707070"
        android:textSize="18dp"
        android:fontFamily="@font/roboto"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/csir_net_27_june_2021"
        android:textColor="#707070"
        android:textSize="18dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="198dp"
        android:layout_marginStart="66dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="234dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/faculty_2"
        android:textColor="#707070"
        android:textSize="18dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="242dp"
        android:layout_marginStart="66dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="350dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:backgroundTint="#D2D2D2"
        android:text="@string/cancel"
        android:layout_marginStart="20dp"
        style="?android:attr/buttonBarButtonStyle"
        tools:targetApi="lollipop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:backgroundTint="#3C3C3C"
        android:text="@string/forward"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        style="?android:attr/buttonBarButtonStyle"
        tools:targetApi="lollipop" />

</LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>