<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_new_thread"
        android:textSize="19dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#292724"
        android:layout_marginTop="12dp"
        android:layout_marginStart="19dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="61dp"
        android:background="@drawable/description_background"
        android:hint="@string/description"
        android:paddingBottom="100dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="197dp"
        android:layout_marginStart="18dp"
        android:text="Attachment"
        android:textColor="#292724"
        android:fontFamily="@font/roboto"
        android:textSize="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="227dp"
        android:layout_marginStart="17dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="227dp"
        android:layout_marginStart="70dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="333dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="107dp"
        android:backgroundTint="#3C3C3C"
        android:text="@string/create"
        android:textColor="@color/white"/>





</androidx.constraintlayout.widget.ConstraintLayout>